Quake v1.09 for DOS with WATTCP Stack
Original Concept and WATTCP import coding by NeoZeed
Coding by [HCI]Mara'akate

Additional code from sezero, taniwha, spoike, LordHavoc, 
   QuakeForge, FitzQuake, Quakespasm, Darkplaces and more.
---------------------------------------------------------

* Warpspasm will now play the music without the 3D spatializing effect.
* Load music from WAV.  **THIS IS STILL EXPERIMENTAL!**
  If you plan to use this, it MUST be 44khz/16bit *MONO* and you must
  have at least 128MB RAM allocated via -mem or -heapsize!
  Stereo cuts off at 1:35'ish mark.  I have not figured out why.
  Files go into sound/cdtracks/trackX.wav where X is track number.
  Currently porting S_RawSamples from Quake 2 to allow streaming 
  without a huge memory allocation and should fix the stereo issue.
* Now compressed with UPX -9 for sneakernet dudes.
* MAX_DATAGRAM reduced from 32000 to 8000.  Causing IPX issues.
  If this breaks support connecting to Fitz servers let me know.
* SV_LOADENTFILES warns you if an ENT file is loaded.
* Fixed SV_LOADENTFILES to only load from the gamedir.
* Rare bug involving playdemo and connection state
  read more at: http://forums.inside3d.com/viewtopic.php?f=12&t=4944
* SV_DUMPENTITIES.  Dump entities of current map into your /maps gamedir.
* SV_LOADENTFILES.  Defaults to 1.  Allows use of external ent files.
  Coded adapted from MVDSV.
* TIMESTAMP.  Set to 1 for military time, 2 for 12hr AM/PM format.
* Various FitzQuake imports including: Dynamic game directory loading,
  Cmdlist, Unalias, and probably a few others I can't remember.
* Nehahra Menus work properly.
* "-quoth", "-warp", and "-nehahra" paramater support.
* PF_TRACETOSS QC support.  For Nehahra, but other mods may be
  using this.  Thanks to LordHavoc for his code and advice.
* Menu shortcut keys.
  - 's', 'm', 'o', 'h', and 'q' at the main menu.
  - 'e' and 'v' at the options menu.
* BSP Version 28 (Quake Pre-Release) support.  Thanks to Engoo port guy.