@@ -1,15 +1,16 @@
 # ignore all make dependency files
 *.d
 *.o
-bin/
-# ignore all the windows binaries - they shouldn't be committed! 
-Debug/
-Release/
 *.ncb
 *.opt
 *.plg
 *.suo
 *.user
 *.aps
-*.clw
+*.clwbin/
+# ignore all the windows binaries - they shouldn't be committed! 
+Debug/
+Release/
 out.txt
+gas2masm.exe
+gas2masm.ilk
