@@ -19,6 +19,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 // cmd.c -- Quake script command processing module
 
+#include <ctype.h>
 #include "quakedef.h"
 
 void Cmd_ForwardToServer (void);
@@ -37,6 +38,8 @@ cmdalias_t	*cmd_alias;
 qboolean	cmd_wait;
 
 cvar_t cl_warncmd = {"cl_warncmd", "0"};
+char *Sort_Possible_Cmds (char *partial);
+qboolean	Sort_Possible_Strtolower (char *partial, char *complete); // FS
 
 //=============================================================================
 
@@ -753,6 +756,117 @@ void Cmd_ChatInfo (int val)
 				break;
 		}
 	}
+}
+
+#define RETRY_INITIAL	0
+#define RETRY_ONCE		1
+#define RETRY_MULTIPLE	2
+char *Sort_Possible_Cmds (char *partial)
+{
+	cmd_function_t	*cmd;
+	cvar_t			*cvar; // FS
+	int				len;
+	cmdalias_t		*a;
+	int	foundExactCount = 0; // FS
+	int foundPartialCount = 0; // FS
+	int retryPartialFlag = RETRY_INITIAL; // FS
+
+	len = Q_strlen(partial);
+	if (!len)
+		return NULL;
+	foundExactCount = 0;
+	for (cmd=cmd_functions ; cmd ; cmd=cmd->next)
+	{
+		if (!Q_strcmp (partial,cmd->name))
+		{
+			foundExactCount++;
+			return cmd->name;
+		}
+	}
+	for (a=cmd_alias ; a ; a=a->next)
+	{
+		if (!Q_strcmp (partial, a->name))
+		{
+			foundExactCount++;
+			return a->name;
+		}
+	}
+	for (cvar=cvar_vars ; cvar ; cvar=cvar->next)
+	{
+		if (!Q_strcmp (partial,cvar->name))
+		{
+			foundExactCount++;
+			return cvar->name;
+		}
+	}
+retryPartial:
+	foundPartialCount = 0;
+	for (cmd=cmd_functions ; cmd ; cmd=cmd->next)
+	{
+		if (Sort_Possible_Strtolower(partial, cmd->name))
+		{
+			foundPartialCount++;
+			if(retryPartialFlag == RETRY_MULTIPLE)
+				Con_Printf("  %s [C]\n", cmd->name);
+			else if (retryPartialFlag == RETRY_ONCE)
+				return cmd->name;
+		}
+	}
+	for (a=cmd_alias ; a ; a=a->next)
+	{
+		if (Sort_Possible_Strtolower(partial, a->name))
+		{
+			foundPartialCount++;
+			if(retryPartialFlag == RETRY_MULTIPLE)
+				Con_Printf("  %s [A]\n", a->name);
+			else if (retryPartialFlag == RETRY_ONCE)
+				return a->name;
+		}
+	}
+	for (cvar=cvar_vars ; cvar ; cvar=cvar->next)
+	{
+		if (Sort_Possible_Strtolower(partial, cvar->name))
+		{
+			foundPartialCount++;
+			if(retryPartialFlag == RETRY_MULTIPLE)
+				Con_Printf("  %s [V]\n", cvar->name);
+			else if (retryPartialFlag == RETRY_ONCE)
+				return cvar->name;
+		}
+	}
+	if(foundPartialCount == 1)
+	{
+		retryPartialFlag = RETRY_ONCE;
+		CompleteCommand();
+		goto retryPartial;
+	}
+	else if (foundPartialCount == 0)
+	{
+		return NULL;
+	}
+	else if (retryPartialFlag == RETRY_INITIAL)
+	{
+		retryPartialFlag = RETRY_MULTIPLE;
+		Con_Printf("Listing matches for '%s'...\n", partial);
+		goto retryPartial;
+	}
+	else if (foundExactCount+foundPartialCount > 0)
+		Con_Printf("Found %i matches.\n", foundExactCount+foundPartialCount);
+	return NULL;
+}
+
+qboolean	Sort_Possible_Strtolower (char *partial, char *complete)
+{
+	int partialLength = 0;
+	int x = 0;
+	partialLength = strlen(partial);
+	while(x < partialLength)
+	{
+		if(tolower(partial[x]) != tolower(complete[x]))
+			return false;
+		x++;
+	}
+	return true;
 }
 
 /*
