@@ -48,6 +48,7 @@ int		keyshift[256];		// key to map to if shift held down in console
 int		key_repeats[256];	// if > 1, it is autorepeating
 qboolean	keydown[256];
 cvar_t cl_unbindall_protection = {"cl_unbindall_protection", "1", false}; // FS: Warning for unbindall
+extern char *Sort_Possible_Cmds (char *partial); // FS
 
 typedef struct
 {
@@ -212,7 +213,8 @@ void Key_Console (int key)
 	HANDLE	th;
 	char	*clipText, *textCopied;
 #endif
-	
+extern	cvar_t	console_old_complete;
+
 	if (key == K_ENTER)
 	{	// backslash text are commands, else chat
 		if (key_lines[edit_line][1] == '\\' || key_lines[edit_line][1] == '/')
@@ -242,27 +244,34 @@ void Key_Console (int key)
                 return;
 	}
 
-        if (key == 'r') // FS: Reconnect
-        {
-                if (keydown[K_CTRL])
-                {
-                        Cbuf_AddText("reconnect\n");
-                        return;
-                }
-        }
+	if (key == 'r') // FS: Reconnect
+	{
+		if (keydown[K_CTRL])
+		{
+			Cbuf_AddText("reconnect\n");
+			return;
+		}
+	}
 
-        if (key == 'c') // FS: Disconnect
-        {
-                if (keydown[K_CTRL])
-                {
-                        Cbuf_AddText("disconnect\n");
-                        return;
-                }
-        }
+	if (key == 'c') // FS: Disconnect
+	{
+		if (keydown[K_CTRL])
+		{
+			Cbuf_AddText("disconnect\n");
+			return;
+		}
+	}
 
-        if (key == K_TAB)
+	if (key == K_TAB)
 	{	// command completion
-		CompleteCommand ();
+		if(!console_old_complete.value) // FS
+		{
+			cmd = Sort_Possible_Cmds(key_lines[edit_line]+1);
+		}
+		else
+		{
+			CompleteCommand ();
+		}
 		return;
 	}
 
